--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1466,7 +1466,7 @@ config TOUCHSCREEN_RAYDIUM_CHIPSET
 	  If unsure, say N.
 
 config TOUCHSCREEN_NOVATEK_CHIPSET
-        tristate "Novatek touchpanel Novatek series"
+        bool "Novatek touchpanel Novatek series"
         depends on I2C
         help
           Say Y here if you have a Novatek NT36525  touchscreen.
@@ -1476,5 +1476,6 @@ config TOUCHSCREEN_NOVATEK_CHIPSET
           If unsure, say N.
 
 source "drivers/input/touchscreen/nova_mmi/Kconfig"
+source "drivers/input/touchscreen/nova_36525_mmi/Kconfig"
 
 endif
