arm64: configs: ginna: Enable MOTO drivers
Signed-off-by: electimon <electimon@gmail.com>

--- a/arch/arm64/configs/ginna_defconfig
+++ b/arch/arm64/configs/ginna_defconfig
@@ -286,7 +286,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
-CONFIG_MODULE_FORCE_LOAD=y
+# CONFIG_MODULE_FORCE_LOAD is not set
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
@@ -1267,6 +1267,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SENSORS_LIS3LV02D is not set
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
+# CONFIG_INPUT_DRV2624_HAPTICS is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_QCOM_COINCELL is not set
@@ -1276,6 +1277,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
 # CONFIG_ISL29020 is not set
+CONFIG_MOT_UTAG=y
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1770 is not set
 # CONFIG_SENSORS_APDS990X is not set
@@ -1292,7 +1294,13 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_QPNP_MISC is not set
 CONFIG_DROPBOX=y
+# CONFIG_SARSENSOR_SX9331 is not set
+# CONFIG_SARSENSOR_SX9325 is not set
+# CONFIG_SARSENSOR_SX9310 is not set
 # CONFIG_C2PORT is not set
+CONFIG_INPUT_AWINIC_HAPTIC=y
+CONFIG_AW8624_HAPTIC=y
+# CONFIG_AW869X_HAPTIC is not set
 
 #
 # EEPROM support
@@ -1748,6 +1756,7 @@ CONFIG_INPUT_JOYSTICK=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
+CONFIG_TOUCHSCREEN_CHIPONE_TDDI_MMI=y
 # CONFIG_TOUCHSCREEN_FOCALTECH_MMI is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
@@ -1815,14 +1824,15 @@ CONFIG_TOUCHSCREEN_CYPRESS_CYTTSP5_DEVICE_ACCESS=y
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
 # CONFIG_TOUCHSCREEN_ROHM_BU21023 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX is not set
-# CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_FTS is not set
+# CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_GEN_VKEYS is not set
 # CONFIG_TOUCHSCREEN_GT9XX_v28 is not set
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_EKTF3XXX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_NOVATEK_CHIPSET is not set
+# CONFIG_TOUCHSCREEN_ILITEK_CHIPSET is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
@@ -1860,6 +1870,9 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 # CONFIG_SENSORS_FPC_1020 is not set
+# CONFIG_INPUT_EGISTEC_FPS is not set
+# CONFIG_INPUT_ABOV is not set
+CONFIG_INPUT_ABOV_A96T=y
 # CONFIG_SMI130 is not set
 # CONFIG_RMI4_CORE is not set
 
@@ -2373,6 +2386,7 @@ CONFIG_THERMAL_QPNP=y
 # CONFIG_GENERIC_ADC_THERMAL is not set
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_THERMAL_TSENS=y
+CONFIG_MMI_SYS_TEMP=y
 
 #
 # Qualcomm thermal drivers
@@ -2412,6 +2426,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_BCM590XX is not set
 # CONFIG_MFD_AXP20X_I2C is not set
 # CONFIG_MFD_CROS_EC is not set
+# CONFIG_MFD_MADERA_SPI is not set
 # CONFIG_PMIC_DA903X is not set
 # CONFIG_MFD_DA9052_SPI is not set
 # CONFIG_MFD_DA9052_I2C is not set
@@ -3800,6 +3815,7 @@ CONFIG_USB_BAM=y
 # CONFIG_QCOM_GENI_SE is not set
 CONFIG_MSM_EXT_DISPLAY=y
 CONFIG_MSM_RMNET_BAM=y
+CONFIG_HPUE_DETECT=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK_MSM=y
@@ -4004,6 +4020,7 @@ CONFIG_EXTCON_GPIO=y
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
+# CONFIG_EXTCON_MADERA is not set
 # CONFIG_MEMORY is not set
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
@@ -4355,7 +4372,7 @@ CONFIG_NVMEM_SPMI_SDAM=y
 # FPGA Configuration Support
 #
 # CONFIG_FPGA is not set
-# CONFIG_SENSORS is not set
+CONFIG_SENSORS=y
 CONFIG_SENSORS_SSC=y
 # CONFIG_TEE is not set
 
@@ -4459,6 +4476,13 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 # CONFIG_FAT_DEFAULT_UTF8 is not set
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_NTFS_FS is not set
 
 #
