--- a/arch/arm64/configs/ginna_defconfig
+++ b/arch/arm64/configs/ginna_defconfig
@@ -1267,7 +1267,6 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_SENSORS_LIS3LV02D is not set
 # CONFIG_AD525X_DPOT is not set
 # CONFIG_DUMMY_IRQ is not set
-# CONFIG_INPUT_DRV2624_HAPTICS is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_QCOM_COINCELL is not set
@@ -1293,6 +1292,7 @@ CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_QPNP_MISC is not set
+# CONFIG_HAPTIC_DRV2625 is not set
 CONFIG_DROPBOX=y
 # CONFIG_SARSENSOR_SX9331 is not set
 # CONFIG_SARSENSOR_SX9325 is not set
@@ -1867,6 +1867,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_CMA3000 is not set
 # CONFIG_INPUT_SOC_BUTTON_ARRAY is not set
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
+# CONFIG_INPUT_DRV2624_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
 CONFIG_SENSORS_FPC_1020=y
